Finished (without captions)

--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
 	<!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js"></script>
+	<script src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.compatibility.js"></script>
 	<script src="gallery.js"></script>
 </head>
 <body>
 <div id="content">
-<div id="gallery-wrap">
-    <div id="gallery">
-    	<div id="uno" class="pic"></div>
-     	<div id="dos" class="pic"></div>
-     	<div id="tres" class="pic"></div>
-     	<div id="cuatro" class="pic"></div>
-     	<div id="cinco" class="pic"></div>				
-    </div>
-<div id="gallery-controls">
-	<div id="gallery-prev"></div>
-	<div id="gallery-next"></div>
-	<div class="clear"></div>
-</div>
-</div>
+	<div id="gallery-wrap">
+		<div id="gallery">
+    		<img id="uno" class="pic" src="images/1.jpg" alt="Arbol al anochecer" />
+			<img id="dos" class="pic" src="images/2.jpg" alt="El mar de noche" />
+			<img id="tres" class="pic" src="images/3.jpg" alt="" />
+			<img id="cuatro" class="pic" src="images/4.jpg" alt="" />
+			<img id="cinco" class="pic" src="images/5.jpg" alt="" />	
+			<div class="clear"></div>		
+    	</div>
+		<div id="gallery-controls">
+			<div id="gallery-prev"></div>
+			<div id="gallery-next"></div>
+			<div class="clear"></div>
+		</div>
+	</div>
+	<div id="caption"></div>
 </div>
 </body>
 </html>
